# agentlb

./: .gitignore  Cargo.toml  README.md  go.mod
.github/workflows/: ci.yml
.spec/: 001.initial.md  002.session-usage-selection.md
cmd/agentlb/: main.go  main_integration_test.go
internal/config/: config.go
internal/session/: session.go  session_test.go
internal/state/: state.go
src/: config.rs  main.rs  session.rs  state.rs  status.rs  supervisor.rs
tests/: main_integration.rs  spec_002_integration.rs
